# rag_chunk_lab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EVALUATION_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  TESTING_REPORT.md  VAGUE_QUERY_OPTIMIZATION.md  fix_relative_imports.py  generate_ground_truth.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_ground_truth_ollama.jsonl  test_vague_query_optimization.py  test_vague_query_optimization_fast.py  update_imports.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.rag/: pyvenv.cfg
docs/guides/: TESTING.md
docs/tutorials/: azure_foundry_complete_tutorial.md  azure_foundry_tutorial.py  trulens_tutorial.py
examples/: vague_query_optimization_demo.py
examples/demos/: vague_query_optimization_demo.py
rag_chunk_lab/: api.py  azure_foundry_evaluation.py  chunkers.py  cli.py  config.py  embedding_analysis.py  embedding_fine_tuning.py  evaluation.py  generation.py  generic_evaluation.py  ground_truth_generator.py  hierarchical_chunking.py  indexing.py  legal_evaluation.py  monitoring.py  production_monitoring.py  retrieval.py  utils.py  vague_query_optimization_system.py  vague_query_optimizer.py
rag_chunk_lab/core/: __init__.py  chunkers.py  generation.py  indexing.py  retrieval.py
rag_chunk_lab/evaluation/: __init__.py  embedding_analysis.py  embedding_metrics.py  ground_truth_generator.py
rag_chunk_lab/utils/: __init__.py
rag_chunk_lab/vague_query/: __init__.py  adaptive_prompt_engineering.py  context_enrichment_pipeline.py  hybrid_embeddings.py  metadata_enricher.py  vague_query_optimization_system.py  vague_query_optimizer.py
test_documents/: sample_legal.txt
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_chunkers.py  test_generation.py  test_indexing.py  test_integration_complete.py  test_optimizations.py  test_performance.py  test_runner.py  test_vague_query_optimizer.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_vague_query_optimization.py  test_vague_query_optimization_fast.py
tutorials/: deepeval_complete_tutorial.md  deepeval_tutorial.py  quickstart_evaluation.md  trulens_complete_tutorial.md
vague_optimization_data/: indexing_stats.json
vague_optimization_data/hybrid_embedding_index/: bm25_model.pkl  embeddings_cache.pkl  index_metadata.json
